[project]
name = "nimbusagent"
version = "0.8.0"
description = "An OpenAI agent with basic memory, functions, and moderation support"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = [
    "openai",
    "gpt3",
    "gpt3.5",
    "gpt4",
    "gpt4o",
    "ai"
]
authors = [
    { name = "Lee Huffman" }
]
dependencies = [
    "openai>=1.99.1",
    "tiktoken==0.10.0",
    "pydantic==2.11.7",
    "numpy==2.3.2",
    "dotenv==0.9.9"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.1",
    "black~=25.8.0",
    "mypy~=1.17.1",
    "types-requests~=2.32.4",
]

[project.urls]
homepage = "https://github.com/aerisweather/nimbusagent"
repository = "https://github.com/aerisweather/nimbusagent"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

